--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Layout from '../components/Layout.astro';
 <a href="https://fool.medium.com/the-first-days-of-the-rest-of-my-life-1d2bc2852991">I retired in January 2024</a> and spent the next 8 months preparing for and then taking a bicycle trip across much of Canada;  you can <a href=#canada>read about that below.</a>
 <p>
 <hr>
-<b>In May 2025 I am touring Slovenia.  You can <a href="slovenia">read about that here</a></b>
+<b><h2>In May 2025 I am touring Slovenia.  You can <a href="slovenia">read about that here</a></h2></b>
 <p>
 <b>In January 2025 I did a short tour in Central California, which <a href="vsummary">you can read about here</a></b>
 <p>
