--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -10,13 +10,13 @@ import Layout from '../components/Layout.astro';
 
         <h1>Slovenia Bike Tour, May 2025</h1>
         <h2>
-           First biking in Europe with friend Jeff Bernards
+           Biking in Slovenia with Jeff Bernards
         </h2>
       </div>
 <p>
 <p>
 <h3>Trip Summary</h3>
-<b>Distance: 350+ miles</a>
+<b>Distance: 350+ miles</b>
 <br>
 <b>Difficulty: fairly easy (using e-bikes)</b>
 <br>
