--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -29,8 +29,8 @@ Friend Jeff Bernards, who led our tour of Death Valley back in Feb 2011, invited
 <p>
 I'll be journalling here as I travel.
 <p>
+<a href=sday0>Day 0 - Preparing around Ljubljana</a>
 <!--
-<a href=sday0>Day 0 -</a>
 <br>
 <a href=sday0>Day 0 -</a>
 <br>
