--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -22,7 +22,7 @@ import Layout from '../components/Layout.astro';
 <br>
 <b><a href="https://ridewithgps.com/collections/3934044?privacy_code=TGywjmAWZLdBOgoTm1FBoboK3wkdgEY6">Link to proposed route in RidewithGPS</a></b>
 <br>
-<h3><a href="https://photos.app.goo.gl/vJaiSbJqpC2HM8m87">Full photo gallery from this trip</a></h3>
+<h3><a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Full photo gallery from this trip</a></h3>
 <br>
 <p>
 Friend Jeff Bernards, who led our tour of Death Valley back in Feb 2011, invited me to bike around his adopted homeland of Slovenia in May 2025.
