--- a/src/pages/slovenia/sday0.astro
+++ b/src/pages/slovenia/sday0.astro
@@ -14,7 +14,7 @@ import Layout from '../../components/Layout.astro';
         </h2>
       </div>
 <hr>
-<a href="https://photos.app.goo.gl/vJaiSbJqpC2HM8m87">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
+<a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
 <hr>
 <p>
 Landed in Ljublana 2 days ago after uneventful international air travel (my favorite kind of international air travel!)  I hadn't fully grasped how small Slovenia was until I walked through customs without a word or any questions - passport was stamped but nobody cared what I was bringing in, why I was here, or how long I was going to stay.  I kept expecting there to be more customs or, maybe, some other flight arriving into the airport at the same time as mine, but it was just mine, and suddenly I was at the bus ticket counter buying a ticket into town.  I walked out of the airport across the street to the bus stop and could see how small the terminal was, in this, Slovenia's biggest airport.  My shuttle into town was surprisingly long; seemed like a lot of countryside before we approached the capital that the airport could have been in instead for convenience.  My first indicator that convenience is maybe not a huge priority here as it is in the US...
