--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -30,9 +30,9 @@ Friend Jeff Bernards, who led our tour of Death Valley back in Feb 2011, invited
 I'll be journalling here as I travel.
 <p>
 <a href=sday0>Day 0 - Preparing around Ljubljana</a>
-<!--
 <br>
-<a href=sday0>Day 0 -</a>
+<a href=sday1>Day 1 - Ljubljana to Bloke Lake</a>
+<!--
 <br>
 <a href=sday0>Day 0 -</a>
 <br>
