--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -32,9 +32,9 @@ I'll be journalling here as I travel.
 <a href=sday0>Day 0 - Preparing around Ljubljana</a>
 <br>
 <a href=sday1>Day 1 - Ljubljana to Bloke Lake</a>
-<!--
 <br>
-<a href=sday0>Day 0 -</a>
+<a href=sday2>Day 2 - Exporing west of Nova Ves</a>
+<!--
 <br>
 <a href=sday0>Day 0 -</a>
 <br>
