minor fixes day2

--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -33,7 +33,7 @@ I'll be journalling here as I travel.
 <br>
 <a href=sday1>Day 1 - Ljubljana to Bloke Lake</a>
 <br>
-<a href=sday2>Day 2 - Exporing west of Nova Ves</a>
+<a href=sday2>Day 2 - Exporing west of Nova Vas</a>
 <!--
 <br>
 <a href=sday0>Day 0 -</a>
