--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -34,9 +34,9 @@ I'll be journalling here as I travel.
 <a href=sday1>Day 1 - Ljubljana to Bloke Lake</a>
 <br>
 <a href=sday2>Day 2 - Exporing west of Nova Vas</a>
-<!--
 <br>
-<a href=sday0>Day 0 -</a>
+<a href=sday3>Day 3 - Bloke Lake to Novo Mesto</a>
+<!--
 <br>
 <a href=sday0>Day 0 -</a>
 <br>
