--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -36,10 +36,9 @@ I'll be journalling here as I travel.
 <a href=sday2>Day 2 - Exporing west of Nova Vas</a>
 <br>
 <a href=sday3>Day 3 - Bloke Lake to Novo Mesto</a>
-<!--
 <br>
-<a href=sday0>Day 0 -</a>
-<br>
+<a href=sday4>Day 4 - Kocevje to Hotel Kovac</a>
+<!-- <br>
 <a href=sday0>Day 0 -</a>
 <br>
 <a href=sday0>Day 0 -</a>
