--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -38,8 +38,9 @@ I'll be journalling here as I travel.
 <a href=sday3>Day 3 - Bloke Lake to Novo Mesto</a>
 <br>
 <a href=sday4>Day 4 - Kocevje to Hotel Kovac</a>
-<!-- <br>
-<a href=sday0>Day 0 -</a>
+<br>
+<a href=sday5>Day 5 - Hotel Kovac to Selce</a>
+<!--
 <br>
 <a href=sday0>Day 0 -</a>
 <br>
