--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -40,9 +40,9 @@ I'll be journalling here as I travel.
 <a href=sday4>Day 4 - Kocevje to Hotel Kovac</a>
 <br>
 <a href=sday5>Day 5 - Hotel Kovac to Selce</a>
-<!--
 <br>
-<a href=sday0>Day 0 -</a>
+<a href=sday6>Day 6 - Anhovo to Kobarid</a>
+<!--
 <br>
 <a href=sday0>Day 0 -</a>
 <br>
