--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -44,10 +44,10 @@ I'll be journalling here as I travel.
 <a href=sday6>Day 6 - Anhovo to Kobarid</a>
 <br>
 <a href=sday7>Day 7 - Kobarid to Bovec</a>
+<br>
+<a href=sday8>Day 8 - Bovec to Lake Bled</a>
+<br>
 <!--
-<br>
-<a href=sday0>Day 0 -</a>
-<br>
 <a href=sday0>Day 0 -</a>
 <br>
 <a href=sday0>Day 0 -</a>
