--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -47,8 +47,8 @@ I'll be journalling here as I travel.
 <br>
 <a href=sday8>Day 8 - Bovec to Lake Bled</a>
 <br>
-<!--
-<a href=sday0>Day 0 -</a>
+<a href=sday9>Day 9 - Bled to Jezersko (some by train)</a>
+<!-- 
 <br>
 <a href=sday0>Day 0 -</a>
 <br>
