--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -48,9 +48,9 @@ I'll be journalling here as I travel.
 <a href=sday8>Day 8 - Bovec to Lake Bled</a>
 <br>
 <a href=sday9>Day 9 - Bled to Jezersko (some by train)</a>
-<!-- 
 <br>
-<a href=sday0>Day 0 -</a>
+<a href=sday10>Day 10 - Jezersko to Logarska Dolina valley</a>
+<!--
 <br>
 <a href=sday0>Day 0 -</a>
 <br>
