--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -52,10 +52,10 @@ I'll be journalling here as I travel.
 <a href=sday10>Day 10 - Jezersko to Logarska Dolina valley</a>
 <br>
 <a href=sday11>Day 11 - Logarska Dolina to Camp Menina</a>
+<br>
+<a href=sday12>Day 12 - Short ride to Forest camp in Mozirje</a>
+<br>
 <!--
-<br>
-<a href=sday0>Day 0 -</a>
-<br>
 <a href=sday0>Day 0 -</a>
 <br>
 <a href=sday0>Day 0 -</a>
