--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -55,8 +55,8 @@ I'll be journalling here as I travel.
 <br>
 <a href=sday12>Day 12 - Short ride to Forest camp in Mozirje</a>
 <br>
+<a href=sday13>Day 13 - Mozirje to Celje</a>
 <!--
-<a href=sday0>Day 0 -</a>
 <br>
 <a href=sday0>Day 0 -</a>
 <br>
