--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -56,10 +56,10 @@ I'll be journalling here as I travel.
 <a href=sday12>Day 12 - Short ride to Forest camp in Mozirje</a>
 <br>
 <a href=sday13>Day 13 - Mozirje to Celje</a>
+<br>
+<a href=sday14>Day 14 - Celje to Brezice</a>
+<br>
 <!--
-<br>
-<a href=sday0>Day 0 -</a>
-<br>
 <a href=sday0>Day 0 -</a>
 <br>
 <a href=sday0>Day 0 -</a>
