--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -59,14 +59,8 @@ I'll be journalling here as I travel.
 <br>
 <a href=sday14>Day 14 - Celje to Brezice</a>
 <br>
-<!--
-<a href=sday0>Day 0 -</a>
+<a href=sday15>Day 15 - coastal day trip</a>
 <br>
-<a href=sday0>Day 0 -</a>
-<br>
-<a href=sday0>Day 0 -</a>
-<br>
--->
 <p>
 <h3>You can read about my other trips <a href="/">on the main page of this site</a></h3>
     </div>
