--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -19,15 +19,14 @@ import Layout from '../components/Layout.astro';
 <b>Distance: 350+ miles</b>
 <br>
 <b>Difficulty: fairly easy (using e-bikes)</b>
+<b><a href="https://ridewithgps.com/events/383616-slovenia-tour-2025">Link to final route in RidewithGPS</a></b>
 <br>
-<b><a href="https://ridewithgps.com/collections/3934044?privacy_code=TGywjmAWZLdBOgoTm1FBoboK3wkdgEY6">Link to proposed route in RidewithGPS</a></b>
+<iframe src="https://ridewithgps.com/embeds?type=event&eventId=383616&title=Slovenia%20Tour%202025&description=E-bike%20Tour%20around%20Slovenia%20in%202025&sampleGraph=true&defaultShowAll=true" style="width: 1px; min-width: 100%; height: 700px; border: none;" scrolling="no"></iframe>
 <br>
 <h3><a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Full photo gallery from this trip</a></h3>
 <br>
 <p>
-Friend Jeff Bernards, who led our tour of Death Valley back in Feb 2011, invited me to bike around his adopted homeland of Slovenia in May 2025.
-<p>
-I'll be journalling here as I travel.
+Friend Jeff Bernards, who led our tour of Death Valley back in Feb 2011, invited me to bike around his adopted homeland of Slovenia in May 2025.  Below you'll find my write up of our travels, wherein we saw many beautiful things and met many wonderful people.
 <p>
 <a href=sday0>Day 0 - Preparing around Ljubljana</a>
 <br>
