--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -16,7 +16,9 @@ import Layout from '../components/Layout.astro';
 <p>
 <p>
 <h3>Trip Summary</h3>
-<b>Distance: 350+ miles</b>
+<b>Distance: 510ish miles
+<br>
+<b>Climbing: 38309 feet
 <br>
 <b>Difficulty: fairly easy (using e-bikes)</b>
 <b><a href="https://ridewithgps.com/events/383616-slovenia-tour-2025">Link to final route in RidewithGPS</a></b>
