--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -16,11 +16,12 @@ import Layout from '../components/Layout.astro';
 <p>
 <p>
 <h3>Trip Summary</h3>
-<b>Distance: 510ish miles
+<b>Distance: 510ish miles</b>
 <br>
-<b>Climbing: 38309 feet
+<b>Climbing: 38309 feet</b>
 <br>
 <b>Difficulty: fairly easy (using e-bikes)</b>
+<br>
 <b><a href="https://ridewithgps.com/events/383616-slovenia-tour-2025">Link to final route in RidewithGPS</a></b>
 <br>
 <iframe src="https://ridewithgps.com/embeds?type=event&eventId=383616&title=Slovenia%20Tour%202025&description=E-bike%20Tour%20around%20Slovenia%20in%202025&sampleGraph=true&defaultShowAll=true" style="width: 1px; min-width: 100%; height: 700px; border: none;" scrolling="no"></iframe>
