--- a/src/pages/slovenia.astro
+++ b/src/pages/slovenia.astro
@@ -29,7 +29,7 @@ import Layout from '../components/Layout.astro';
 <h3><a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Full photo gallery from this trip</a></h3>
 <br>
 <p>
-Friend Jeff Bernards, who led our tour of Death Valley back in Feb 2011, invited me to bike around his adopted homeland of Slovenia in May 2025.  Below you'll find my write up of our travels, wherein we saw many beautiful things and met many wonderful people.
+Friend Jeff Bernards, who led our tour from Death Valley to San Diego back in Feb 2011, invited me to bike with him around his adopted homeland of Slovenia in May 2025.  Below you'll find my write up of our travels, wherein we saw many beautiful things and met many wonderful people, traveling on e-bikes through the mountains and countryside.
 <p>
 <a href=sday0>Day 0 - Preparing around Ljubljana</a>
 <br>
