--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Layout from '../components/Layout.astro';
       <div class="header">
         <h1>foolish travels</h1>
         <h2>
-          What I did during my summer 2024 vacation (and more)
+          Adventures on bicycles
         </h2>
 <hr>
       </div>
@@ -17,7 +17,7 @@ import Layout from '../components/Layout.astro';
 <a href="https://fool.medium.com/the-first-days-of-the-rest-of-my-life-1d2bc2852991">I retired in January 2024</a> and spent the next 8 months preparing for and then taking a bicycle trip across much of Canada;  you can <a href=#canada>read about that below.</a>
 <p>
 <hr>
-<b><h2>In May 2025 I am touring Slovenia.  You can <a href="slovenia">read about that here</a></h2></b>
+<b>In May 2025 I toured Slovenia.  You can <a href="slovenia">read about that here</a>.</b>
 <p>
 <b>In January 2025 I did a short tour in Central California, which <a href="vsummary">you can read about here</a></b>
 <p>
