--- a/src/pages/slovenia/sday0.astro
+++ b/src/pages/slovenia/sday0.astro
@@ -14,22 +14,39 @@ import Layout from '../../components/Layout.astro';
         </h2>
       </div>
 <hr>
-<a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
 <p>
-Landed in Ljublana 2 days ago after uneventful international air travel (my favorite kind of international air travel!)  I hadn't fully grasped how small Slovenia was until I walked through customs without a word or any questions - passport was stamped but nobody cared what I was bringing in, why I was here, or how long I was going to stay.  I kept expecting there to be more customs or, maybe, some other flight arriving into the airport at the same time as mine, but it was just mine, and suddenly I was at the bus ticket counter buying a ticket into town.  I walked out of the airport across the street to the bus stop and could see how small the terminal was, in this, Slovenia's biggest airport.  My shuttle into town was surprisingly long; seemed like a lot of countryside before we approached the capital that the airport could have been in instead for convenience.  My first indicator that convenience is maybe not a huge priority here as it is in the US...
+<a href=https://q42.me/trips/slovenia/day0-lockbridge.jpg><img src=https://q42.me/trips/slovenia/day0-lockbridge-small.jpg></a>
+<a href=https://q42.me/trips/slovenia/day0-dragon.jpg><img src=https://q42.me/trips/slovenia/day0-dragon-small.jpg></a>
+<p>
+Landed in Ljubljana 2 days ago after uneventful international air travel (my favorite kind of international air travel!)  I hadn't fully grasped how small Slovenia was until I walked through customs without a word or any questions - passport was stamped but nobody cared what I was bringing in, why I was here, or how long I was going to stay.  I kept expecting there to be more customs or, maybe, some other flight arriving into the airport at the same time as mine, but it was just mine, and suddenly I was at the bus ticket counter buying a ticket into town.  I walked out of the airport across the street to the bus stop and could see how small the terminal was, in this, Slovenia's biggest airport.  My shuttle into town was surprisingly long; seemed like a lot of countryside before we approached the capital that the airport could have been in instead for convenience.  My first indicator that convenience is maybe not a huge priority here as it is in the US...
 <p>
 Got dropped off across the street from Jeff's place and met up with him around dusk, and we walked around town a bit and I was reminded of how outgoing Jeff is as we visited with various acquaintances of his and stopped into a couple of places for a beer.  I was hopeful that some drinks would help me conquer jetlag but, spoiler, I continue to struggle with it on day 3, though I got about 6 hours of almost uninterrupted sleep last night so I think I am getting over the hump.
 <p>
+<a href=https://q42.me/trips/slovenia/day0-statue.jpg><img src=https://q42.me/trips/slovenia/day0-statue-small.jpg></a>
+<p>
+<i>This poet is a famed Slovenian.  Looks more dramatic in the dark...</i>
+<p>
 The next day was monday and we did some sightseeing around town, riding up to the castle in town just to test out the bikes a bit and stop in to see some friends of Jeff's - he's friends or at least acquaintances with probably hundreds of people around here, super outgoing guy that he is.  He always says hi to everyone and chats them up.
+<p>
+<a href=https://q42.me/trips/slovenia/day0-castleselfie.jpg><img src=https://q42.me/trips/slovenia/day0-castleselfie-small.jpg></a>
+<a href=https://q42.me/trips/slovenia/day0-castle.jpg><img src=https://q42.me/trips/slovenia/day0-castle-small.jpg></a>
+<p>
+<i>Ljubljana has a castle atop a hill and we walked up there</i>
 <p> 
 We'd not set out immediately to have some time to "get bikes all dialed in", and I was surprised to find that the bike he has for me to borrow - a commuter e-bike with an extra battery, flat handlebars, in essence nothing I would choose to ride, felt pretty good without any adjustments.  Won't be using all of the stuff I brought to try to adjust geometry after all, which is both easy and a little disappointing that I lugged it across an ocean.  The biggest bummer was that we figured out pretty late in the day that the rear panniers I'd brought - which I use when I tour and love and hold my stuff and are reliable and waterproof - wouldn't fit onto the rear rack of the bike I was riding, so I was suddenly looking at not being able to carry much!
+<p>
+<a href=https://q42.me/trips/slovenia/day0-fastbikeservice.jpg><img src=https://q42.me/trips/slovenia/day0-fastbikeservice-small.jpg></a>
+<p>
+<i>This translates to "fast bike service".  Google was pretty sure I meant "hitler bike service" though</i>
 <p>
 But, everything works if you let it, and Jeff was about ready to buy some new bags for his bike so we dashed over to the shop which had what he wanted in stock and honestly for way cheaper than you can get it in the states, somehow (these were the same bags that most folks use, Ortlieb brand.)  I don't love that kind of bag, but I'm using his old ones which clip on without trouble to the bike and leaving mine in his apartment with the rest of my luggage.  I could have packed a LOT lighter if I hadn't brough bags and bike gear I wasn't gonna use, but better to have it and not use it than to not have it and need it, I suppose.
 <p>
 We went out to eat at one of the many restaurants whose owner he has befriended, had a couple of beers at one of his favorite bars, and called it a night.
 <p>
-In the morning, we caught an interesting kind of rideshare and went to check out the Skocjan caves.  Sadly no photography allowed so I can't share much of what I saw, but google them and check out what is online - pretty amazing, similar to Carlsbad Caverns except with a river running through and a lot longer and prettier hike out.  So glad we headed up and also the exercise in the moderately long hike - probably 10k or so through the cave and back up the "longest, prettiest" way from the end.  Caught a ride with the same driver back into town, nice and cheap - 5 euros each way for an almost hour drive (we just joined him on his commute as he visited some clients a bit further up the road from the caves), and then the afternoon was pretty chill, hanging out and reading while Jeff watched some sportsball.
+<a href=https://q42.me/trips/slovenia/day0-caves.jpg><img src=https://q42.me/trips/slovenia/day0-caves-small.jpg></a>
+<a href=https://q42.me/trips/slovenia/day0-caves2.jpg><img src=https://q42.me/trips/slovenia/day0-caves2-small.jpg></a>
+<p>
+In the morning, we caught an interesting kind of rideshare - just some guy who happened to be going our way, and he had another (paid) passenger who didn't speak much english.  Seems like he was making a work trip in a work-owned car but didn't mind collecting 10 euros per person each way...worked well for us but made me wonder if everything would be fast and loose in this country... We took the ride to go check out the <a href="https://www.park-skocjanske-jame.si/en/">Skocjan caves</a>.  No photography in the main part of the caves was allowed, so I can't share much of what I saw, but you can cehck out the website I linked to see some interesting shots on top of what I could grab.  They are pretty amazing, similar to <a href="https://en.wikipedia.org/wiki/Carlsbad_Caverns_National_Park">Carlsbad Caverns</a> in the US, except these have a river running through and a lot longer and prettier hike out.  I'm so glad we headed up and also the exercise in the moderately long hike - probably 10k or so through the cave and back up the "longest, prettiest" way from the end.  Caught a ride with the same driver back into town, nice and cheap - 5 euros each way for an almost hour drive, and then the afternoon was pretty chill, hanging out and reading while Jeff watched some sportsball.
 <p>
 Evening was a quick trip to the grocery store for some avocados and to see this phenomenon that Jeff had been telling me about in every store here apparently, kinda a "miscellaneous aisle" - underwear, camping equipment, shelf organizers, shower shoes, and just random stuff right through the middle of the otherwise normal grocery store.  Kinda a trip but also the local flavor that I love experiencing so much when I travel.
 <p>
