--- a/src/pages/slovenia/sday1.astro
+++ b/src/pages/slovenia/sday1.astro
@@ -23,19 +23,24 @@ Descending: less
 Difficulty: medium-low
 <br>
 <a href=https://www.strava.com/activities/14404251228>Link to workout in Strava</a>
-<hr>
-<a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
 <p>
-Broken elevator meant dragging our loaded bikes (probably 100 pounds) down 3 flights of stairs, which seemed like a bad omen, but that was the only bummer of the day.  Set off around 10am and rode through town past some of Jeff's acquaintances that we stopped and said hi to before a lot of miles on a bike path that ended up going past a microbrewery run by a friend of Jeff's.  Got a 5 minute tour of the one-room operation, tried one of their beers and then bought 8 bottles to go since we're camping in a tiny town without much beer for sale for the next 2 nights.  Friendly folks at Rooster brewing and then we were off into the really rural lands.
+<a href=https://q42.me/trips/slovenia/day1-start.jpg><img src=https://q42.me/trips/slovenia/day1-start-small.jpg></a>
 <p>
-The route Jeff had sent me turned out not to be the way he wanted to go so we followed a bike route into the country and did a little ad-hoc routing to try to avoid the busier roads.
+A broken elevator in Jeff's apartment building meant dragging our loaded bikes (probably 100 pounds each) down 3 flights of stairs, which seemed like a bad omen--but that was the only bummer of the day.  We set off around 10am and rode through town past some of Jeff's acquaintances that we stopped and said hi to, before a lot of miles on a bike path that ended up going past a microbrewery run by a friend of Jeff's.  Got a 5 minute tour of the one-room operation, tried one of their beers and then bought 8 bottles to go since we're camping in a tiny town without much beer for sale for the next 2 nights.  After a fine send-off from the friendly folks at Rooster brewing, we were off into the really rural lands.
 <p>
-Got to the top of a pretty big climb and the only way onwards from there was on a fairly busy highway with no shoulder, but we just cranked the e-bikes up to max and hammered for the ~1.5mi til our route got back onto quieter roads.
+<a href=https://q42.me/trips/slovenia/day1-rooster.jpg><img src=https://q42.me/trips/slovenia/day1-rooster-small.jpg></a>
 <p>
-After that was another climb, maybe 1000', which I insisted on working pretty hard on, despite the e-assist (I'm still learning how much battery I have and was not generally using too much assist, while Jeff just blasted up it at full power).  Fortunately by this climb we were again following the planned route that I had on my bike computer so I rode the last several miles alone and just followed my bike computer's map and pulled up to the campground a few minute after Jeff.  We are the only ones here tonight, so we have the run of the place and are able to hang out in the warm lodge since it is a bit chilly out with occasional drizzle.  Even the staff is gone until tomorrow so we will get cleaned up, hang out for the afternoon, and then head into town in the evening for dinner and to visit the store (apparently town is just the store and the restaurant, we are in pretty rural country).
+The route Jeff had sent to me ahead of the trip turned out not to be the way he actually wanted to go, so we followed a bike route into the country and did a little ad-hoc routing to try to avoid the busier roads.
 <p>
-First day on the e-bike I was kinda glad to have it since the climbing, if I had been on my analog bike, would have taken me a fairly long time and been really sweaty.  The bike doesn't fit perfectly after a few hours in the saddle, but I think it'll do.
+<a href=https://q42.me/trips/slovenia/day1-openroad.jpg><img src=https://q42.me/trips/slovenia/day1-openroad-small.jpg></a>
+<p>
+We got to the top of a pretty big climb and the only way onwards from there was on a fairly busy highway with no shoulder, but we just cranked the e-bikes up to max and hammered for the ~1.5mi til our route got back onto quieter roads.
+<p>
+After that was another climb, maybe 1000', which I insisted on working pretty hard on, despite the e-assist (I'm still learning how much battery I have and was today was not generally using too much assist, while Jeff just blasted up it at full power).  Fortunately by this climb we were again following the planned route that I had on my bike computer so I rode the last several miles alone and just followed my bike computer's map and pulled up to the campground a few minutes after Jeff.  We are the only ones here tonight, so we have the run of the place and are able to hang out in the warm lodge since it is a bit chilly out with occasional drizzle.  Even the staff is gone until tomorrow so we will get cleaned up, hang out for the afternoon, and then headed into town in the evening for dinner and to visit the store (apparently town is just the store and the restaurant; we are in pretty rural country).
+<p>
+<a href=https://q42.me/trips/slovenia/day1/roosters.jpg><img src=https://q42.me/trips/slovenia/day1-roosters-small.jpg></a>
+<p>
+First day on the e-bike and I was kinda glad to have it since the climbing, if I had been on my analog bike, would have taken me a fairly long time and been really sweaty.  The bike doesn't fit perfectly after a few hours in the saddle, but I think it'll do.
 <p>
     </div>
 
