--- a/src/pages/slovenia/sday2.astro
+++ b/src/pages/slovenia/sday2.astro
@@ -24,20 +24,34 @@ Difficulty: medium easy
 <br>
 <a href=https://www.strava.com/activities/14416471338>Link to workout in Strava</a>
 <hr>
-<a href="https://photos.app.goo.gl/n64phYFmB4n9dg3Y6">Link to photo gallery from this trip</a> - sorry, I won't be able to link individual photos in these posts!
-<hr>
 <p>
-Our second day was a rest day, and we weren't sad to spend the morning cooking, eating, and hanging out in the warm lodge, since it was under 40 and rainy when we woke up after a long night's sleep in the warm tiny cabin we chose over our tents.  Breakfast was oatmeal and coffee and brunch was a couple beers we'd carried from yesterday's visit to Rooster brewery, before we headed into town for lunch.
+<a href=https://q42.me/trips/slovenia/day2-disappearinglake.jpg><img src=https://q42.me/trips/slovenia/day2-disappearinglake-small.jpg></a>
 <p>
-I had thought we were coming back to camp (1.7mi but up a big hill) before I was going to set out on solo adventuring (while Jeff rested), so I hadn't gotten ready for my planned 40 mile ride but then Jeff said I didn't need to come back right as we were ready to leave, so I hurried to get my kit (extra warmth, snacks, repair tools, bike computer with latest planned route loaded into it) all together while Jeff stood in the rain moderately impatiently.  Having collected myself, we bombed into town and I had the "workman's lunch special" beef goulash and helped Jeff finish his pizza.
+<i>The disappearing lake was fully appeared when I visited...had been raining lately and even sprinkled a bit on me as I rode</i>
 <p>
-I had used RidewithGPS' heatmaps to design a loop past some interesting looking national parks - to see a disappearing lake and a natural bridge.  But, both features were 15mi or so away so the first 15mi was just "riding where most people ride" to get over there.  And indeed I did see a few large groups of roadies - 8 to 15 spandex folks - on various parts of my route, including the worst highway-ish roads right at rush hour near Cerknica.  So, people do ride these narrow trafficky roads, but I was glad for the e-bike at full assist and still ended up pulling off a few times to let traffic past.  Fortunately I was pulled off when a roadie train of 15 going uphill went past me in the opposite direction, because despite 70kph speed limit, that road was barely wide enough for 2 cars, and couldn't have handled them + me + 1 car passing between us!  But that was the most sketchy part and 90+% was quiet country lanes, dirt roads, and villages, with a bit of cyclepath thrown in for good measure.
+Our second day was a rest day, and we weren't sad to spend the morning cooking, eating, and hanging out in the warm lodge, since it was under 40 degrees (F) and rainy when we woke up after a long night's sleep in the warm tiny cabin we chose to upgrade to over our planned tents.  Breakfast was oatmeal and coffee and brunch was a couple beers we'd carried from yesterday's visit to Rooster brewery, before we headed into town for lunch.
+<p>
+I had thought we were coming back to camp (1.7mi but up a big hill) before I was going to set out on solo adventuring (while Jeff rested/puttered around and watched basketball games on the internet), so I hadn't gotten ready for my planned 40 mile ride when we were going to set out for lunch, but then Jeff said I didn't need to come back - right as we were ready to leave.  So, I hurried to get my kit (extra warmth, snacks, repair tools, bike computer with latest planned route loaded into it) all together while Jeff stood in the rain moderately impatiently.  Having collected myself, we bombed into town and I had the "Workman's Lunch special" which was beef goulash, and also helped Jeff finish his pizza.  One of the themes of the trip was not wasting food so we ate well and brought leftovers home more than once.  Pizza leftovers generally not so great so we tried to just finish the pizzas we had whenever possible...
+<p>
+<a href=https://q42.me/trips/slovenia/day2-gravel.jpg><img src=https://q42.me/trips/slovenia/day2-gravel-small.jpg></a>
+<p>
+<i>Heatmaps found me some amazing gravel roads with less than 4 cars over a dozen miles</i>
+<p>
+I had used RidewithGPS' heatmaps to design a loop past some interesting looking national parks - to see a nearby disappearing lake and a natural bridge.  But, both features were 15mi or so away so the first 15mi was just "riding where most people ride" to get over there.  And indeed I did see a few large groups of roadies - 8 to 15 spandex folks - on various parts of my route, including the worst highway-ish roads right at rush hour near Cerknica.  So, people do ride these roads - some narrow and trafficky - roads, but I was glad for the e-bike at full assist and still ended up pulling off a few times to let traffic past in one spot.  Fortunately I was pulled off when a roadie train of 15 going uphill went past me in the opposite direction, because despite 70kph speed limit, that road was barely wide enough for 2 cars, and couldn't have handled them + me + 1 car passing between us!  But that was the only really sketchy part of the route I ended up with, and 90+% was instead quiet country lanes, dirt roads, and villages, with a bit of cyclepath thrown in for good measure.
 <p> 
-Once through Cerknica on my way out, it was mostly dirt around the lake, where I took some pictures and hiked down to the shore to see a spring-in-a-cave (from a fair distance, since the cave entrance was well underwater.  I could have borrowed a boat to go in, I guess, but I was pretty much all alone out there and the boats were clearly privately owned...)  The dirt road around the lake hit the dirt road to the natural bridge so I veered off and was absolutely alone for the 5mi or so to the bridge and back to the highway into Cerknica.  The bridge (looked like a river cave from my point of view) was cool but it was several hundred feet below the roadway and the trail to get very close was pretty sketchy and lonely so I satisfied myself with some pictures from the top and carried on back through town.
+<a href=https://q42.me/trips/slovenia/day2-man.jpg><img src=https://q42.me/trips/slovenia/day2-man-small.jpg></a>
+<p>
+<i>One theme of the trip was that Slovenia seemed to be pretty realistic about the human impact on nature.  This sign wasn't tongue in cheek but was typically frank and helps visitors remain aware of how we fit into this beauty</i>
+<p>
+Once through Cerknica on my way out, it was mostly dirt around the lake, where I took some pictures and hiked down to the shore to see a spring-in-a-cave (from a fair distance, since the cave entrance was well underwater.  I could have borrowed - without permission - a boat to go in, I guess, but I was pretty much all alone out there and the boats were clearly privately owned...)  The dirt road around the lake hit the dirt road to the natural bridge so I veered off and was absolutely alone for the 5mi or so to the bridge and back to the highway into Cerknica.  The land bridge (which looked like a river cave from my point of view) was neat, probably even cool, but it was several hundred feet below the roadway and the trail to get very close was pretty sketchy and lonely - wasn't confident anyone would find me that day if I fell off or broke a leg - so I satisfied myself with some pictures from the top and carried on back through town.
+<p>
+<a href=https://q42.me/trips/slovenia/day2-bikerswelcome.jpg><img src=https://q42.me/trips/slovenia/day2-bikerswelcome-small.jpg></a>
+<p>
+<i>Sign outside a hostel (?) in some random place</i>
 <p>
 Enjoyed the last 10 mi back to the campground since that was all very traffic-quiet and I just had the bike on full assist so went pretty fast up a reasonably large climb without breaking a sweat.
 <p>
-Gonna get cleaned up (it was a bit muddy out, though never hard to ride levels of squish) before heading back into town for dinner.
+Gonna get cleaned up (it was a bit muddy out, though never hard to ride levels of squishy) before heading back into town for dinner.
 <p>
     </div>
 
